tests/integration/errors/array/array-as-var.it
Use of an array as a variable

- compilation error
=========
void main() {
    int a;
    int b[2];

    a = b * 2;
    b = a * 2;
}
=========
<stdin>:5: error: use of identifier 'b' of kind 'array' as an expression
<stdin>:6: error: expression 'b' of kind 'array' is not assignable
